@@ -1,3 +1,11 @@
+2010-04-07  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc-interface/trans.c (call_to_gnu): In the return-by-target-ptr case
+	do not set the result type if there is a specified target and do not
+	convert the result in any cases.
+	(protect_multiple_eval): Make direct SAVE_EXPR for CALL_EXPR.
+	(maybe_stabilize_reference) <COMPOUND_EXPR>: Merge with CALL_EXPR.
+
 2010-03-10  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc-interface/Makefile.in (SPARC/Solaris): Use sparcv8plus.
